--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,10 @@
   "chat.agent.enabled": false,
   "chat.commandCenter.enabled": false,
   "inlineChat.accessibleDiffView": "off",
-  "terminal.integrated.initialHint": false
+  "terminal.integrated.initialHint": false,
+  "cSpell.words": [
+    "Anum",
+    "Kofi",
+    "Tettey"
+  ]
 }
