--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,9 @@
   "terminal.integrated.initialHint": false,
   "cSpell.words": [
     "Anum",
+    "Dientes",
     "Kofi",
+    "Myckel",
     "socialmedia",
     "Tettey"
   ]
