--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,10 +59,15 @@
   "terminal.integrated.initialHint": false,
   "cSpell.words": [
     "Anum",
+    "Catarina",
     "Dientes",
     "Kofi",
+    "Lacerda",
+    "Lagon",
     "Myckel",
+    "Rondonia",
     "socialmedia",
-    "Tettey"
+    "Tettey",
+    "useremail"
   ]
 }
