--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,13 +61,17 @@
     "Anum",
     "Catarina",
     "Dientes",
+    "Gifty",
     "Kofi",
     "Kolob",
     "Lacerda",
     "Lagon",
     "Myckel",
+    "Myckell",
+    "Osei",
     "Rondonia",
     "socialmedia",
+    "Tema",
     "Tettey",
     "useremail"
   ]
